ansible/lab/files/lab/old/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: kcd
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: kcd
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kcd-web
      port: 80
